components/galleries/styles.css
.woh__image-gallery {
  margin: 3rem 1rem;
}

.woh__image-grid {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 80px;
}

.woh__cold-hearth {
  margin: 5rem;
}

.woh__image-item {
  border: 1px solid #ddd;
  border-radius: 8px;
  overflow: hidden;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background: #4f4848;
  margin: 0;
}
.woh__image-item.transparent {
  background: none;
}

.woh__bread-loading {
  margin: 4rem;
}

.woh__card-fan-member {
  grid-area: 1 / 1;
  justify-self: center;

  display: flex;
  justify-content: center;

  img {
    border-radius: 8px;
  }
}

.woh__bread-card-fan {
  display: grid;
}

.woh__card-fan-frame {
  display: grid;
  place-items: center;
  justify-self: stretch;
}

.woh__bread-description {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

[class*='woh__image-wrapper-'] {
  display: flex;
  align-items: center;
  background: #b4b1b1;
  border-radius: 8px;
}

.woh__order-bread-button {
  cursor: pointer;
  background: white;
  border-radius: 50%;
  margin: 0 0.5rem;
}

.woh__bread-stack-button:active,
.woh__order-bread-button:active {
  transform: translate(2px, 2px);
}

.woh__caption {
  color: white;
  text-align: center;
  padding: 0.5rem;
  position: relative;
}

@media (max-width: 1172px) {
  .woh__image-grid {
    grid-template-columns: 1fr 1fr;
  }
}

@media (max-width: 860px) {
  .woh__image-grid {
    grid-template-columns: 1fr;
  }
}

